--- a/app/templates/listar-produtos.html
+++ b/app/templates/listar-produtos.html
@@ -13,7 +13,7 @@
             <th>Imagem</th>
             <th colspan= "2">Ações</th>
         </tr>
-        {% for produto in listProdutos %}
+        {% for produto in listarProdutos %}
             <tr id="trProd">
                 <td>{{produto.nomeProduto}}</td>
                 <td><img src="/media/{{ produto.imagemProduto }}"  alt=""  style="width: 100px; height: auto;"></td>
