--- a/app/templates/cards-produtos.html
+++ b/app/templates/cards-produtos.html
@@ -14,7 +14,7 @@
 <h1>Produtos</h1>
 <div class="container" id="blog-container">
     <!-- for para loop dos posts entra aqui  -->
-     {% for produto in listProdutos %}
+    {% for prod in produtos %}
     <div class="blog-card">
         <div class="blog-image">
             <img src="/media/{{ produto.imagemProduto }}" alt="Card-imagem">
