Importações ajustadas e Login

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,7 @@
-{% extends "template.html"%}
+{% extends "template.html" %}
 {% load static %}
-{% block 'titulo'%}Index{% endblock%}
+
+{% block 'titulo'%}Iris{% endblock %}
 
 {% block 'main' %}
 
