--- a/app/static/css/estilo.css
+++ b/app/static/css/estilo.css
@@ -102,7 +102,7 @@ footer {
     width: 100%;
     height: 70px;
     border-radius: 15px 15px 0px 0px;
-    background-color: #D97D5B;
-    color: #F9FFFE;
+    background-color: #F9FFFE; 
+    color: #D97D5B;
     text-align: center;
 }
