--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -6,9 +6,9 @@
 
 <div class="container w-50">
     <h1 class="text-center">Área Restrita</h1>
-    <form action"{% url 'fazerLogin' %}" method="POST">
+    <form action="{% url 'formLogin' %}" method="POST">
         {% csrf_token %}
-        {{ formLogin.as_p }}
+        {{ form.as_p }}
         <div class="d-grid gap-2">
             <input type="submit" value="Entrar" class="btn-sucess" expand="block">
         </div>
