--- a/app/templates/sobre-nos.html
+++ b/app/templates/sobre-nos.html
@@ -1,6 +1,6 @@
 {% extends "template.html"%}
 {% load static %}
-{% block 'titulo'%}Index{% endblock%}
+{% block 'titulo'%}Sobre Nós - Iris{% endblock%}
 
 {% block 'main' %}
 
