--- a/app/templates/cards-produtos.html
+++ b/app/templates/cards-produtos.html
@@ -14,7 +14,7 @@
 <h1>Produtos</h1>
 <div class="container" id="blog-container">
     <!-- for para loop dos posts entra aqui  -->
-    {% for prod in produtos %}
+     {% for produto in listProdutos %}
     <div class="blog-card">
         <div class="blog-image">
             <img src="/media/{{ produto.imagemProduto }}" alt="Card-imagem">
@@ -27,8 +27,16 @@
         </div>
             <p class="blog-description">
                 {{produto.descricaoProduto}}
-
             </p>
+            <div class="blog-categoria">
+            <span><strong>Categoria:</strong>
+              {% if produto.categoria %}
+                    {{ produto.categoria }}
+                {% else %}
+                    Sem categoria
+                {% endif %}
+            </span>
+            </div>
             <div class="blog-footer">
                 <div class="author-image">
                 <span class="blog-author">
@@ -39,10 +47,10 @@
                     <i class="fas fa-star"></i>
                 </span>
             </div>                
-                <a href="#" class="read-more">Adicionar ao Carrinho</a>
+                <a href="{% url 'checkout' produto.id %}" class="read-more">Comprar</a>
             </div>
         </div>
-    </div>
+    </div> 
     <!-- for para loop dos posts termina aqui -->
     {% endfor %}
     
