--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -7,8 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
-<title>{% block 'titulo' %}{% endblock %}</title>
+    <title>{% block 'titulo' %}{% endblock %}</title>
 </head>
 <body>
     <nav>
@@ -17,7 +18,6 @@
             <a href="{% url 'app' %}">Home</a>
             <a href="{% url 'sobreNos' %}">Sobre nós</a>
             <a href="{% url 'listarProdutos' %}">Produtos</a>
-            <a href="{% url 'addUsuario' %}"><button class="btn_cadastrar">Cadastrar</button></a>
             <a href="{% url 'login' %}"><button class="btn_entrar">Entrar</button></a>
         </div>
     </nav>
@@ -26,8 +26,23 @@
         {% block 'main' %}{% endblock %}
     </main>
 
-    <footer>
-        <p>&copy; Todos os direitos reservados</p>
+    <footer class="footer bg-body-tertiary text-center text-lg-start">
+        <div class="container d-flex flex-wrap justify-content-between align-items-center">
+            <div class="col-md-4 d-flex align-items-center">
+                <span class="mb-3 mb-md-0 text-muted">© 2025, Arthur Lopes e Sabrina Santos</span>
+            </div>
+
+            <a href="/" class="d-flex align-items-center">
+                <img src="{% static 'asse/logo.png' %}" alt="Bootstrap Logo" width="60" height="auto" class="d-inline-block align-text-top">
+            </a>
+
+            <ul class="nav col-md-4 justify-content-end">
+                    <li class="nav-item"><a href="{% url 'app' %}" class="nav-link px-2 text-muted">Início</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Sobre Nós</a></li>
+                    <li class="nav-item"><a href="{% url 'cardsProdutos' %}" class="nav-link px-2 text-muted">Produtos</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Suporte</a></li>
+            </ul>
+        </div>
     </footer>
 
 </body>
