--- a/app/templates/cards-produtos.html
+++ b/app/templates/cards-produtos.html
@@ -1,59 +1,33 @@
 {% extends "template.html" %}
-
-{% load static %}
-
-{% block head %}
-<script src="https://kit.fontawesome.com/30dea9d32e.js" crossorigin="anonymous"></script>
-{% endblock %}
-
-{% block 'titulo' %} Produtos {% endblock %}
+{% load static%}
 
 {% block 'main' %}
-
-<section class="py-5" id="Section-posts">
-<h1>Produtos</h1>
-<div class="container" id="blog-container">
-    <!-- for para loop dos posts entra aqui  -->
-     {% for produto in listProdutos %}
-    <div class="blog-card">
-        <div class="blog-image">
-            <img src="/media/{{ produto.imagemProduto }}" alt="Card-imagem">
-            <div class="blog-data"><i class="far fa-heart"></i></div>
-        </div>
-        <div class="blog-content">
-            <div class="blog-price">
-            <h2 class="blog-title">{{produto.nomeProduto}}</h2>
-            <p href="#" class="precoProduto">{{produto.precoProduto}}</p>
-        </div>
-            <p class="blog-description">
-                {{produto.descricaoProduto}}
-            </p>
-            <div class="blog-categoria">
-            <span><strong>Categoria:</strong>
-              {% if produto.categoria %}
-                    {{ produto.categoria }}
-                {% else %}
-                    Sem categoria
-                {% endif %}
-            </span>
-            </div>
-            <div class="blog-footer">
-                <div class="author-image">
-                <span class="blog-author">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </span>
-            </div>                
-                <a href="{% url 'checkout' produto.id %}" class="read-more">Comprar</a>
-            </div>
-        </div>
-    </div> 
-    <!-- for para loop dos posts termina aqui -->
-    {% endfor %}
-    
+<h1>Produtos da API</h1>
+<div class="container">
+    {% for produto in produtos %}
+        <div class="card">
+            <img src="{{ produto.image }}" alt="{{ produto.title }}">
+            <div class="card-body">
+                <div class="card-title">{{ produto.title|truncatechars:50 }}</div>
+                <div class="card-price">R$ {{ produto.price }}</div>
+                <div class="card-category">{{ produto.category }}</div>
+                <div class="card-descripition">{{ produto.description }}</div>
+                <div class="card-rating">
+    {% with rate=produto.rating.rate %}
+        {% for i in "12345" %}
+            {% if forloop.counter <= rate %}
+                <i class="fas fa-star" style="color: gold;"></i>
+            {% elif forloop.counter0 < rate %}
+                <i class="fas fa-star-half-alt" style="color: gold;"></i>
+            {% else %}
+                <i class="far fa-star" style="color: gold;"></i>
+            {% endif %}
+        {% endfor %}
+        <span style="margin-left: 5px;">({{ produto.rating.count }} avaliações)</span>
+    {% endwith %}
 </div>
-</section>
+            </div>
+        </div>
+    {% endfor %}
+</div>
 {% endblock %}
