--- a/app/templates/editar-produto.html
+++ b/app/templates/editar-produto.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block 'titulo' %} Cadastrar Produto {% endblock %}
+{% block 'titulo' %} Editar Produto {% endblock %}
 
 {% block 'main' %}
 <div class="container mt-5 d-flex align-items-center justify-content-center" >
@@ -12,7 +12,7 @@
         {{ form.as_p }}
     </div>
 
-        <input type="submit" value="Editar"  id="btnCadastrar">
+        <input type="submit" value="Salvar Alterações"  id="btnCadastrar">
     </form>
 </div>
 {% endblock %}
