--- a/app/templates/listar-produtos.html
+++ b/app/templates/listar-produtos.html
@@ -5,17 +5,39 @@
 {% block titulo %} Produtos {% endblock %}
 
 {% block 'main' %}
-<a href="{% url 'cadastrarProduto' %}" style=" justify-content: center; display: flex; margin: 3em; text-decoration: none;"><button  id="btnEditar"> Cadastrar Produto </button> </a>
+
+    <a href="{% url 'cadastrarProduto' %}" style="justify-content: center; display: flex; margin: 3em; text-decoration: none; text-align: center;"><button  id="btnEditar"> Cadastrar Produto </button> </a>
     <table class="table table-hover p-3 m-auto" style="width: 40%;">
         <tr id="trUsuarios">
-            <th>Produto</th>
-            <th>Imagem</th>
+            
+            <th>Foto</th>
+            <th>Nome</th>
+            <th>Descrição</th>
+            <th>Preço</th>
+            <th>Estoque</th>
+            <th>Categoria</th>
             <th colspan= "2">Ações</th>
         </tr>
-        {% for prod in produtos %}
-	        <img src="{{prod.image}}" width="50px">
-	        <h3>{{prod.title}} </h3>
-	        <p>R$ {{prod.price}}</p>
+        {% for produto in listarProdutos %}
+            <tr id="trProd">
+                
+                <td><img src="/media/{{ produto.imagemProduto }}"  alt=""  style="width: 100px; height: auto;"></td>
+                <td>{{produto.nomeProduto}}</td>
+                <td>{{produto.descricaoProduto}}</td>
+                <td>{{produto.precoProduto}}</td>
+                <td>{{produto.qtdeEstoque}}</td>
+                   <td>
+                {% if produto.categoriaProduto %}
+                    {{ produto.categoriaProduto }}
+                {% else %}
+                    Sem categoria
+                {% endif %}
+                </td>
+                <td><a href="{% url 'excluirProduto' produto.id %}"> <button  id="btnExcluir"> Excluir </button> </a></td>
+               <td><a href="{% url 'editarProduto' produto.id %}"> <button id="btnEditar"> Editar</button> </a></td> 
+            
+
+            </tr>
         {% endfor %}
     </table>
 
