--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -9,7 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
+    <script src="https://kit.fontawesome.com/30dea9d32e.js" crossorigin="anonymous"></script>
+
     <title>{% block 'titulo' %}{% endblock %}</title>
+  
 </head>
 <body>
     <nav>
@@ -33,7 +37,7 @@
             </div>
 
             <a href="/" class="d-flex align-items-center">
-                <img src="{% static 'asse/logo.png' %}" alt="Bootstrap Logo" width="60" height="auto" class="d-inline-block align-text-top">
+                <img src="{% static 'img/logo.png' %}" alt="Bootstrap Logo" width="60" height="auto" class="d-inline-block align-text-top">
             </a>
 
             <ul class="nav col-md-4 justify-content-end">
