Alterações de vendas

--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -37,7 +37,7 @@
             </div>
 
             <a href="/" class="d-flex align-items-center">
-                <img src="{% static 'img/logo.png' %}" alt="Bootstrap Logo" width="60" height="auto" class="d-inline-block align-text-top">
+            <img src="{% static 'img/logo.png' %}" alt="Logo">
             </a>
 
             <ul class="nav col-md-4 justify-content-end">
