--- a/app/templates/add-usuario.html
+++ b/app/templates/add-usuario.html
@@ -1,13 +1,19 @@
-{% extends "template.html" %}
+{% extends 'template.html' %}
+
 {% load static %}
-{% block 'titulo' %} Novo Usuário {% endblock %}
+
+{% block titulo %} Novo Usuário {% endblock %}
 
 {% block 'main' %}
-<div class="container mt-5" style="max-width: 400px;">
-    <div class="card shadow">
-        <div class="card-body">
-            <h3 class="card-title text-center mb-4">Cadastro</h3>
-          <form method="post" action="{% url 'addUsuario' %}" id="ContainerLogin">
+
+<div class="users d-flex flex-column align-items-center justify-content-center mt-2 mb-2">
+    <img src="{% static 'assets/users.png' %}" alt="">
+        <h1 id="h1Usuarios">Cadastrar Usuário</h1>
+    </div>
+
+
+<div class="container d-flex align-items-center justify-content-center" >
+    <form method="post" action="{% url 'addUsuario' %}" id="ContainerLogin">
         {% csrf_token %}
         {% comment %} <div class="form-group"> {% endcomment %}
 
@@ -38,16 +44,23 @@
         <div class="col-md-6">
             {{ form.numero_residencia }}
         </div>
-    </div>         
+    </div>          <a href="{% url 'login' %}" class="CadastrarLink">Já tem uma conta ? Faça Login</a>
+
         <input type="submit" value="Cadastrar" id="btnCadastrar">
         {% comment %} </div> {% endcomment %}
     </form>
-            <div class="text-center mt-3">
-                Já tem cadastro? <a href="{% url 'login' %}">Faça login</a>
-            </div>
-        </div>
-    </div>
 </div>
+
+{% if messages %}
+  <div class="messages">
+    {% for message in messages %}
+      <div class="alert {{ message.tags }}">
+        {{ message }}
+      </div>
+    {% endfor %}
+  </div>
+{% endif %}
+
 <script>
 
     function buscaCep(cep){
@@ -72,4 +85,5 @@
     }
 
 </script>
+
 {% endblock %}
