--- a/app/templates/sobre-nos.html
+++ b/app/templates/sobre-nos.html
@@ -4,7 +4,7 @@
 
 {% block 'main' %}
 
-    <img src="{% static 'img/sobre-nos.png' %}" alt="Logo oficial da Iris Cosméticos, composta por uma borboleta de corpo laranja
+    <img src="{% static 'img/logo_oficial.png' %}" alt="Logo oficial da Iris Cosméticos, composta por uma borboleta de corpo laranja
     com asas feitas de flores rosa claro, do lado direito está escrito com uma fonte de caligrafia Iris Cosméticos" class="img-index">
 <div class="main-text">
     <h1 class="titulo">A história de Iris</h1>
