--- a/app/templates/sobre-nos.html
+++ b/app/templates/sobre-nos.html
@@ -3,13 +3,18 @@
 {% block 'titulo'%}Sobre Nós - Iris{% endblock%}
 
 {% block 'main' %}
-
+<div class="container-fluid d-flex align-items-center justify-content-center flex-column flex-md-row mt-custom">
     <img src="{% static 'img/logo_oficial.png' %}" alt="Logo oficial da Iris Cosméticos, composta por uma borboleta de corpo laranja
-    com asas feitas de flores rosa claro, do lado direito está escrito com uma fonte de caligrafia Iris Cosméticos" class="img-index">
-<div class="main-text">
-    <h1 class="titulo">A história de Iris</h1>
-    <p>Nossa missão é tananan e no futuro queremos ser os mais mais, mas nem tudo são flores. Queremos ampliar
-    nosso público e marca para todas as pessoas que precisam de uma ajuda para se sentirem empoderadas!</p>
+        com asas feitas de flores rosa claro, do lado direito está escrito com uma fonte de caligrafia Iris Cosméticos" class="logo_oficial mb-4 mb-md-0">
+    <div class="main-text">
+        <h1 class="titulo">A história de Iris</h1>
+        <p>A Íris é uma marca especializada em cosméticos que une sofisticação, qualidade e bem-estar. Fundada com o propósito de oferecer uma experiência de beleza diferenciada, 
+            a Íris desenvolve e seleciona produtos que valorizam a autenticidade, o cuidado pessoal e a diversidade.<br><br>
+            Todos os itens disponíveis em nosso portfólio passam por rigorosos critérios de curadoria, priorizando formulações seguras, eficazes e alinhadas às principais tendências 
+            do mercado. Buscamos constantemente inovação e excelência, com foco em performance sensorial, estética e funcionalidade.<br><br>
+            A marca Íris é movida pela missão de transformar o cotidiano em um momento de expressão e autoestima, por meio de produtos que aliam elegância, identidade e experiência.
+            Compromisso com qualidade, respeito ao consumidor e atenção aos detalhes fazem parte de cada etapa do nosso trabalho.
+        </p>
+    </div>
 </div>
-
 {% endblock %}
