--- a/app/templates/cards-produtos.html
+++ b/app/templates/cards-produtos.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block 'main' %}
-<div class="pt-5" style="padding-top: 80px;">
+<div class="pt-3">
     <div class="container">
         <h2>Produtos da API</h2>
         <div class="row">
@@ -29,6 +29,7 @@
                                     <span style="margin-left: 5px;">({{ produto.rating.count }} avaliações)</span>
                                 {% endwith %}
                             </div>
+                            <a href="{% url 'checkout' produto.id %}" class="btn_comprar">Comprar</a>
                         </div>
                     </div>
                 </div>
