--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,8 +4,8 @@
 {% block 'titulo'%}Iris Beauty{% endblock %}
 
 {% block 'main' %}
-<div class="container d-flex align-items-center justify-content-center flex-column flex-md-row" style="min-height: 70vh;">
-    <img src="{% static 'img/cosmeticos.jpg' %}" alt="Um perfume da marca Gabrielle Chanel, um batosa." class="img-index mb-4 mb-md-0" style="max-width: 350px; width: 100%; height: auto;">
+<div class="container-fluid d-flex align-items-center justify-content-center flex-column flex-md-row mt-custom">
+    <img src="{% static 'img/cosmeticos.jpg' %}" alt="Produtos" class="img-index mb-4 mb-md-0">
     <div class="main-text ms-md-5 mt-4 mt-md-0 text-center text-md-start">
         <h1 class="titulo">Seja bem-vinda à Iris,</h1>
         <p>
