--- a/app/templates/add-usuario.html
+++ b/app/templates/add-usuario.html
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block titulo %} Novo Usuário {% endblock %}
+{% block 'botão'%} <a href="{% url 'login' %}"><button class="btn_entrar">Entrar</button></a> {% endblock %}
 
 {% block 'main' %}
 
