--- a/app/templates/cadastrar-produto.html
+++ b/app/templates/cadastrar-produto.html
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block 'titulo' %} Cadastrar Produto {% endblock %}
+{% block 'botão'%}<a href="{% url 'logout' %}"></a><button class="btn_entrar">Sair</button>{% endblock %}
 
 {% block 'main' %}
 <div class="container mt-5" style="max-width: 400px;">
@@ -27,4 +28,5 @@
         </div>
     </div>
 </div>
+
 {% endblock %}
