--- a/app/templates/cards-produtos.html
+++ b/app/templates/cards-produtos.html
@@ -1,5 +1,6 @@
 {% extends "template.html" %}
 {% load static %}
+{% block 'botão'%}<a href="{% url 'logout' %}"></a><button class="btn_entrar">Sair</button>{% endblock %}
 
 {% block 'main' %}
 <div class="pt-3">
@@ -36,8 +37,8 @@
             {% endfor %}
         </div>
     </div>
-
-    <!-- Div para espaçamento no final da página -->
     <div style="height: 80px;"></div>
 </div>
+
+
 {% endblock %}
