--- a/app/templates/checkout.html
+++ b/app/templates/checkout.html
@@ -1,5 +1,6 @@
 
 {% extends "template.html" %}
+{% block 'botão'%}<a href="{% url 'logout' %}"></a><button class="btn_entrar">Sair</button>{% endblock %}
 
 {% block 'main' %}
 
@@ -16,9 +17,9 @@
             <th>Preço</th>
         </tr>
             <tr id="trProd">
-                <td><img src="/media/{{ produto.imagemProduto }}"  alt=""  style="width: 100px; height: auto;"></td>
-                <td>{{produto.nomeProduto}}</td>
-                <td>{{produto.precoProduto}}</td>
+                <td><img src="/media/{{ produto.image.url }}"  alt=""  style="width: 100px; height: auto;"></td>
+                <td>{{produto.title}}</td>
+                <td>{{produto.price}}</td>
 
             </tr>
 
@@ -41,4 +42,5 @@
         </div>
         {% endif %}
 </div>
+
 {% endblock %}
