--- a/app/templates/compras.html
+++ b/app/templates/compras.html
@@ -1,7 +1,9 @@
 {% extends "template.html" %}
 {% block titulo %}Minhas Compras{% endblock %}
+{% block 'botão'%}<a href="{% url 'logout' %}"></a><button class="btn_entrar">Sair</button>{% endblock %}
 
 {% block 'main' %}
+
 <a href="{% url 'dashboard' %}"><button id="btnVoltar" class="btn ">Voltar</button></a>
 
 <h2 class="text-center" style="margin-top: 1em; margin-bottom: 1em;">Minhas Compras 🧸</h2>
@@ -30,4 +32,5 @@
         {% endfor %}
     </tbody>
 </table>
+
 {% endblock %}
