--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -4,6 +4,7 @@
 
 
 {% block titulo %} Dashboard {% endblock %}
+{% block 'botão'%}<a href="{% url 'logout' %}"></a><button class="btn_entrar">Sair</button>{% endblock %}
 
 {% block 'main' %}
 
@@ -22,4 +23,5 @@
 
       
    </div>
+
 {% endblock %}
