--- a/app/templates/editar-produto.html
+++ b/app/templates/editar-produto.html
@@ -3,8 +3,11 @@
 {% load static %}
 
 {% block 'titulo' %} Editar Produto {% endblock %}
+{% block 'botão'%}<a href="{% url 'logout' %}"></a><button class="btn_entrar">Sair</button>{% endblock %}
 
 {% block 'main' %}
+<a href="{% url 'dashboard' %}"><button id="btnVoltar" class="btn ">Voltar</button></a>
+
 <div class="container mt-5 d-flex align-items-center justify-content-center" >
     <form method="POST" id="ContainerLogin" enctype="multipart/form-data">
         {% csrf_token %}
@@ -15,4 +18,5 @@
         <input type="submit" value="Salvar Alterações"  id="btnCadastrar">
     </form>
 </div>
+
 {% endblock %}
