--- a/app/templates/editar-usuario.html
+++ b/app/templates/editar-usuario.html
@@ -3,8 +3,11 @@
 {% load static %}
 
 {% block 'titulo' %} Editar Usuário {% endblock %}
+{% block 'botão'%}<a href="{% url 'logout' %}"></a><button class="btn_entrar">Sair</button>{% endblock %}
 
 {% block 'main' %}
+<a href="{% url 'dashboard' %}"><button id="btnVoltar" class="btn ">Voltar</button></a>
+
 <div class="container mt-5 d-flex align-items-center justify-content-center" >
     <form method="POST" id="ContainerLogin">
                 {% csrf_token %}
