--- a/app/templates/grafico.html
+++ b/app/templates/grafico.html
@@ -1,8 +1,10 @@
 {% extends 'template.html' %}
 
 {% block 'titulo' %} Estoque {% endblock %}
+{% block 'botão'%}<a href="{% url 'logout' %}"></a><button class="btn_entrar">Sair</button>{% endblock %}
 
 {% block 'main' %}
+<a href="{% url 'dashboard' %}"><button id="btnVoltar" class="btn ">Voltar</button></a>
 
 <div class="caixa-grafico">
 
