--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block 'titulo'%}Iris Beauty{% endblock %}
-
+{% block 'botão'%}<a href="{% url 'login' %}"><button class="btn_entrar">Entrar</button></a>{% endblock %}
 {% block 'main' %}
 <div class="container-fluid d-flex align-items-center justify-content-center flex-column flex-md-row mt-custom">
     <img src="{% static 'img/cosmeticos.jpg' %}" alt="Produtos" class="img-index mb-4 mb-md-0">
