--- a/app/templates/listar-produtos.html
+++ b/app/templates/listar-produtos.html
@@ -3,8 +3,10 @@
 {% load static %}
 
 {% block titulo %} Produtos {% endblock %}
+{% block 'botão'%}<a href="{% url 'logout' %}"></a><button class="btn_entrar">Sair</button>{% endblock %}
 
 {% block 'main' %}
+<a href="{% url 'dashboard' %}"><button id="btnVoltar" class="btn ">Voltar</button></a>
 
     <a href="{% url 'cadastrarProduto' %}" style="justify-content: center; display: flex; margin: 3em; text-decoration: none; text-align: center;"><button  id="btnEditar"> Cadastrar Produto </button> </a>
     <table class="table table-hover p-3 m-auto" style="width: 40%;">
@@ -40,5 +42,4 @@
             </tr>
         {% endfor %}
     </table>
-
 {% endblock %}
