--- a/app/templates/cards-produtos.html
+++ b/app/templates/cards-produtos.html
@@ -7,28 +7,15 @@
     <div class="container">
         <h2>Produtos Iris 🌷</h2>
         <div class="row">
-            {% for produto in produtos %}
+            {% for prod in prods %}
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
                     <div class="card h-100">
-                        <img src="{{ produto.imagemProduto }}" alt="{{ produto.nomeProduto }}" class="card-img-top">
+                        <img src="{{ prod.imagemProduto }}" alt="{{ prod.nomeProduto }}" class="card-img-top">
                         <div class="card-body d-flex flex-column">
-                            <div class="card-title">{{ produto.nomeProduto|truncatechars:50 }}</div>
-                            <div class="card-price">R$ {{ produto.precoProduto }}</div>
-                            <div class="card-category"><span>Categoria: </span>{{ produto.categoriaProduto }}</div>
-                            <div class="card-descripition text-truncate" style="max-height: 3em;">{{ produto.descricaoProduto }}</div>
-                            <div class="card-rating mt-auto">
-                                {% with rate=produto.rating.rate %}
-                                    {% for i in "12345" %}
-                                        {% if forloop.counter <= rate %}
-                                            <i class="fas fa-star" style="color: gold;"></i>
-                                        {% elif forloop.counter0 < rate %}
-                                            <i class="fas fa-star-half-alt" style="color: gold;"></i>
-                                        {% else %}
-                                            <i class="far fa-star" style="color: gold;"></i>
-                                        {% endif %}
-                                    {% endfor %}
-                                    <span style="margin-left: 5px;">({{ produto.rating.count }} avaliações)</span>
-                                {% endwith %}
+                            <div class="card-title">{{ prod.nomeProduto|truncatechars:50 }}</div>
+                            <div class="card-price">R$ {{ prod.precoProduto }}</div>
+                            <div class="card-category"><span>Categoria: </span>{{ prod.categoriaProduto }}</div>
+                            <div class="card-descripition text-truncate" style="max-height: 3em;">{{ prod.descricaoProduto }}</div>
                             </div>
                             <a href="{% url 'checkout' produto.id %}" class="btn_comprar">Comprar</a>
                         </div>
