--- a/app/templates/add-usuario.html
+++ b/app/templates/add-usuario.html
@@ -3,12 +3,11 @@
 {% load static %}
 
 {% block titulo %} Novo Usuário {% endblock %}
-{% block 'botão'%} <a href="{% url 'login' %}"><button class="btn_entrar">Entrar</button></a> {% endblock %}
 
 {% block 'main' %}
 
 <div class="container mt-5" style="max-width: 400px;">
-    <img src="{% static 'assets/users.png' %}" alt="">
+    <img src="{% static 'imagem/users.png' %}" alt="">
 
     <div class="card shadow">
         <div class="card-body">
@@ -21,7 +20,7 @@
                 {{ form.nome }}
                 {{ form.email }}
                 {{ form.senha }}
-
+                {{ form.confirmar_senha }}
                 <div class="row">
                     <div class="col-md-6">
                         {{ form.CEP }}
