--- a/app/templates/cards-produtos.html
+++ b/app/templates/cards-produtos.html
@@ -1,6 +1,5 @@
 {% extends "template.html" %}
 {% load static %}
-{% block 'botão'%}<a href="{% url 'logout' %}"></a><button class="btn_entrar">Sair</button>{% endblock %}
 
 {% block 'main' %}
 <div class="pt-3">
@@ -10,14 +9,29 @@
             {% for prod in prods %}
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
                     <div class="card h-100">
-                        <img src="{{ prod.imagemProduto }}" alt="{{ prod.nomeProduto }}" class="card-img-top">
+                        <img src=" /media/{{prod.imagemProduto }}" alt="{{ prod.nomeProduto }}" class="card-img-top">
                         <div class="card-body d-flex flex-column">
                             <div class="card-title">{{ prod.nomeProduto|truncatechars:50 }}</div>
                             <div class="card-price">R$ {{ prod.precoProduto }}</div>
                             <div class="card-category"><span>Categoria: </span>{{ prod.categoriaProduto }}</div>
                             <div class="card-descripition text-truncate" style="max-height: 3em;">{{ prod.descricaoProduto }}</div>
+                           <div class="card-descripition text-truncate" style="max-height: 3em;">{{ produto.description }}</div>
+                            <div class="card-rating mt-auto">
+                                {% with rate=produto.rating.rate %}
+                                    {% for i in "12345" %}
+                                        {% if forloop.counter <= rate %}
+                                            <i class="fas fa-star" style="color: gold;"></i>
+                                        {% elif forloop.counter0 < rate %}
+                                            <i class="fas fa-star-half-alt" style="color: gold;"></i>
+                                        {% else %}
+                                            <i class="far fa-star" style="color: gold;"></i>
+                                        {% endif %}
+                                    {% endfor %}
+                                    <span style="margin-left: 5px;">({{ produto.rating.count }} avaliações)</span>
+                                {% endwith %}
                             </div>
-                            <a href="{% url 'checkout' produto.id %}" class="btn_comprar">Comprar</a>
+                            <a href="{% url 'checkout' prod.id %}" class="btn_comprar">Comprar</a>
+
                         </div>
                     </div>
                 </div>
@@ -26,6 +40,8 @@
     </div>
     <div style="height: 80px;"></div>
 </div>
+
+
 
 <div class="pt-3">
     <div class="container">
