--- a/app/templates/checkout.html
+++ b/app/templates/checkout.html
@@ -16,9 +16,9 @@
             <th>Preço</th>
         </tr>
             <tr id="trProd">
-                <td><img src="/media/{{ produto.image.url }}"  alt=""  style="width: 100px; height: auto;"></td>
-                <td>{{produto.title}}</td>
-                <td>{{produto.price}}</td>
+                <td><img src="/media/{{ produto.imagemProduto }}"  alt=""  style="width: 100px; height: auto;"></td>
+                <td>{{produto.nomeProduto}}</td>
+                <td>{{produto.precoProduto}}</td>
 
             </tr>
 
