--- a/app/static/css/estilo.css
+++ b/app/static/css/estilo.css
@@ -186,7 +186,7 @@ h2{
 }
 
 .card-body {
-    padding: 16px;
+    padding: 15px;
     display: flex;
     flex-direction: column;
     gap: 8px;
@@ -202,7 +202,7 @@ h2{
 }
 
 .card-price {
-    font-size: 1.1em;
+    font-size: 1.6em;
     color: #cf83fe;
     font-weight: bold;
 }
@@ -212,7 +212,7 @@ h2{
     font-weight: bold;
 }
 
-.card-descripition {
+.card-description {
     font-size: 0.95em;
     color: #333;
     margin-bottom: 8px;
